# shopgenie-public

./: .env.example  .gitignore  AGENTS.md  PRD.md  PROGRESS.md  README.md  TEST_PLAN.md
backend/: .env.example  README.md  pyproject.toml  seed_knowledge.py
backend/app/: __init__.py  ab_testing.py  accounts.py  auth.py  competitive_analysis.py  config.py  deepseek.py  default_knowledge.py  design_image_prompts.py  knowledge_fetch.py  main.py  marketing.py  memory.py  operations.py  performance_import.py  platform_connectors.py  platform_validator.py  postprocess.py  prompts.py  review_mining.py  schemas.py  sessions.py  stream.py  studio.py  vision.py  web_search.py  workspace.py  workspace_context.py
backend/scripts/: seed_demo.py
backend/tests/: test_ab_testing.py  test_auth_isolation.py  test_batch.py  test_chat.py  test_knowledge_fetch.py  test_marketing.py  test_memory.py  test_platform_connectors.py  test_platform_contract.py  test_platform_validator.py  test_postprocess.py  test_profile_api.py  test_review_mining.py  test_sessions.py  test_studio_api.py  test_v2_features.py  test_web_search.py  test_workspace.py  test_workspace_api.py
design/: ShopGenie Chat v2.html  ShopGenie Chat v3.html  ShopGenie Chat.html
design/uploads/: PRD.md
docs/: COMPETITIVE_RESEARCH.md  ENGINEERING_RULES.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: AuthGate.test.tsx  ChatBubble.test.tsx  InputBar.test.tsx  OperationsHub.test.tsx  PerformanceCsvImport.test.tsx  PlatformConnectorPanel.test.tsx  ProductsTab.test.tsx  (+6 more)
(+36 files in other folders)
